--- a/app/src/main/res/layout/category_file_browser_item.xml
+++ b/app/src/main/res/layout/category_file_browser_item.xml
@@ -3,39 +3,42 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="5dip"
-    android:paddingBottom="5dip"
+    android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:gravity="center_vertical">
+    android:paddingBottom="5dip"
+    android:paddingTop="5dip">
 
     <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:layout_gravity="center"
         android:gravity="center">
+
         <ImageView
             android:id="@+id/file_image_frame"
             android:layout_width="65px"
             android:layout_height="65px"
-            android:scaleType="centerInside"
-            android:gravity="center"
-            android:background="@drawable/image_icon_bg"
             android:layout_gravity="center"
-            android:visibility="gone" />
+            android:background="@drawable/image_icon_bg"
+            android:gravity="center"
+            android:scaleType="centerInside"
+            android:visibility="gone"/>
+
         <ImageView
             android:id="@+id/file_image"
             android:layout_width="59px"
             android:layout_height="59px"
-            android:scaleType="centerInside"
+            android:layout_gravity="center"
             android:gravity="center"
-            android:layout_gravity="center" />
+            android:scaleType="centerInside"/>
     </FrameLayout>
+
     <LinearLayout
         android:id="@+id/file_info_layout"
         android:layout_width="0dip"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:layout_gravity="center_vertical"
+        android:layout_weight="1"
         android:orientation="vertical"
         android:paddingLeft="5dip">
 
@@ -65,13 +68,15 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/modified_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
                 android:gravity="left"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                android:textAppearance="?android:attr/textAppearanceSmall"/>
+
             <TextView
                 android:id="@+id/file_size"
                 android:layout_width="wrap_content"
@@ -79,7 +84,7 @@
                 android:layout_gravity="left"
                 android:layout_marginLeft="14px"
                 android:gravity="left"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                android:textAppearance="?android:attr/textAppearanceSmall"/>
 
         </LinearLayout>
     </LinearLayout>
@@ -96,9 +101,9 @@
             android:id="@+id/file_checkbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:scaleType="fitCenter"
+            android:layout_gravity="center"
             android:gravity="center"
-            android:layout_gravity="center" />
+            android:scaleType="fitCenter"/>
 
     </FrameLayout>
 
